# lab06

./: .gitignore  CMakeLists.txt  LICENSE.rtf
.github/workflows/: release.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
tests/: print.cpp  print.hpp
